# OmniCoin2--Core

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  genesis.json
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  database_api.cpp  impacted.cpp
libraries/app/omnibazaar/: mail_api.cpp  mail_api.h  mail_controller.cpp  mail_controller.hpp
libraries/chain/: CMakeLists.txt  account_evaluator.cpp  account_object.cpp  committee_member_evaluator.cpp  database.cpp  db_balance.cpp  db_block.cpp  db_bonus.cpp  db_escrow.cpp  db_getter.cpp  db_init.cpp  db_maint.cpp  db_notify.cpp  db_update.cpp  evaluator.cpp  get_config.cpp  transfer_evaluator.cpp  welcome_bonus_evaluator.cpp  witness_evaluator.cpp  worker_evaluator.cpp
libraries/chain/hardfork.d/: OM-702.hf  OM-713.hf  OM-749.hf  OM-774.hf  OM-774_2.hf  OM-786.hf
libraries/chain/omnibazaar/: account_object_components.hpp  escrow.cpp  escrow.hpp  escrow_evaluator.cpp  escrow_evaluator.hpp  escrow_object.cpp  escrow_object.hpp  exchange.cpp  exchange.hpp  exchange_evaluator.cpp  exchange_evaluator.hpp  exchange_object.hpp  founder_bonus.cpp  founder_bonus.hpp  founder_bonus_evaluator.cpp  founder_bonus_evaluator.hpp  listing.cpp  listing.hpp  listing_evaluator.cpp  listing_evaluator.hpp  listing_object.hpp  multisig_transfer.cpp  multisig_transfer.hpp  (+33 more)
libraries/egenesis/: embed_genesis.cpp
libraries/net/: CMakeLists.txt  core_messages.cpp  mail_object.cpp  mail_sender.cpp  node.cpp  node_impl.hxx
libraries/net/include/graphene/net/: concurrent_unordered_set.hpp  core_messages.hpp  mail_object.hpp  mail_sender.hpp  node.hpp  peer_connection.hpp
libraries/net/omnibazaar/: mail_object.cpp  mail_object.hpp  mail_sender.cpp  mail_sender.hpp  mail_storage.cpp  mail_storage.hpp
libraries/plugins/: CMakeLists.txt
libraries/utilities/: CMakeLists.txt  omnibazaar_util.cpp
libraries/wallet/: CMakeLists.txt  wallet.cpp
programs/cli_wallet/: main.cpp
programs/genesis_util/: genesis_update.cpp
programs/js_operation_serializer/: main.cpp
programs/witness_node/: CMakeLists.txt  main.cpp
tests/benchmarks/: genesis_allocation.cpp
tests/common/: database_fixture.cpp  database_fixture.hpp
tests/intense/: block_tests.cpp
tests/tests/: block_tests.cpp  fee_tests.cpp  operation_tests.cpp  operation_tests2.cpp  uia_tests.cpp
(+41 files in other folders)
